--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -1,14 +1,15 @@
 ---
-title:  "Useful bash"
+title:  "some BASH topics"
 date:   2016-11-16 
 layout: single
 author_profile: true
 comments: true
 ---
 
-This is a mixture of a little introduction to some trivias of bash language and introduction of some frequently used bash commands. Basically every time I encounter a useful bash commands or when I learn something new about a command, I write them down for future reference.
+The more I use bash the more I find it interesting. Basically every time I encounter a useful bash commands or when I learn something new about a command, I write them down for future reference. 
 
 Topics:
+
 - [Others](#others)
 
 ## Show recently modified files
