--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -152,7 +152,7 @@ which will do the work of replacing `RegEx` with `replacement`.
 - more on back referencing, eg:
 	
 	```bash	
-	echo 2014-04-01 | sed 's/\(....\)-\(..\)-\(..\)/\1+	\2+\3/'	}
+	echo 2014-04-01 | sed 's/\(....\)-\(..\)-\(..\)/\1+	\2+\3/'
 	2014+04+01
 	```
 
@@ -191,10 +191,10 @@ See  [Parenthesis difference](http://stackoverflow.com/questions/2188199/how-to-
 	- **Braces**
 		- Used for **parameter expansion**. Can create lists which are often used in loops, eg:
 
-		```bash
-		$ echo {00..8..2} 
-		00 02 04 06 08 
-		```
+	```bash
+	$ echo {00..8..2} 
+	00 02 04 06 08 
+	```
 		
 	- **Single and double square brackets**    
 	Much of below is from [bash brackets](http://stackoverflow.com/questions/3427872/whats-the-difference-between-and-in-bash), and [bash test functions](http://www.ibm.com/developerworks/library/l-bash-test/).
@@ -203,7 +203,7 @@ See  [Parenthesis difference](http://stackoverflow.com/questions/2188199/how-to-
 			and both of them requires careful handling of escaping characters.
 		- use `-a, -o` or `||, &&` for group testing. eg:
 
-			```bash
+			```bash   
 			# the following are the same
 			$ test -e "file1" -a -d "file2"
 			$ test -e "file1" && test -d "file2"
@@ -249,7 +249,6 @@ $ ./myprog < file1.txt
 $ ./myprog arg1 > file.out
 $ ./myprog arg1 2> file.err
 $ ./myprog arg1 &> out_and_err
-
 ```
 	
 - **Want no output** 
