bash.md: fixed some display errors

--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -8,9 +8,15 @@ comments: true
 
 The more I use bash the more I find it interesting. Basically every time I encounter a useful bash commands or when I learn something new about a command, I write them down for future reference. 
 
-Topics:
+Quick links:
 
+- [Regular Expression](#regex) 
+- [find](#find)
+- [vim](#vim)
+- [sed](#sed)
 - [Others](#others)
+
+## <a name="regex"></a>Regular Expressions (to be updtaed)
 
 ## Show recently modified files
 This along with many other ways of displaying files could be accomplished using function `find`. Some examples  are as follows:
@@ -52,7 +58,7 @@ $ cd courses; cd -P ..;pwd
 The `-P` here stands for `physical` (directory)
 
 
-## vim
+## <a name="vim"></a>vim
 
 - In normal mode:	
 	all keys are functional keys. Examples are:
@@ -84,7 +90,7 @@ The `-P` here stands for `physical` (directory)
 	-`:syntax on/off` : turn on/off text-highlighting colorscheme
 
 
-## find
+## <a name="find"></a>find
 General syntax: 	
 `find path -name **** -mtime +1 -newer 20160621 -size +23M ...` 	
 We will introduce each of above parameters and some more in this section:
@@ -130,9 +136,9 @@ There are rich parameters you can specify:
 - `-C3`: show 3 lines before and after
 
 - **grep multiple patters**:
-  `grep "pattern1\|pattern2" filename`
+  `grep "pattern1|pattern2" filename`
 
-## sed
+## <a name="sed"></a>sed
 
 `sed` is short for _Stream EDitor_	
 General formula: 
@@ -162,81 +168,93 @@ Things in `\(...\)` are referred. A dot $\cdot$ in Regex can signify any charact
 
 ## Shell scripting 
 
-- Debugging:	
-	- `bash (or sh) -v script.sh` : displays each command as the program proceeds
+### Debugging:	
+- `bash (or sh) -v script.sh` : displays each command as the program proceeds
 	
-	- `bash (or sh) -x script.sh` : displays values of variables as program runs
+- `bash (or sh) -x script.sh` : displays values of variables as program runs
 
 
 
 ## <a name="others"></a> Others
 
-- **Wild cards**   
-	- `?`: match any single characters 
-	- `*`: match any string
-	- `[abc]`: match any characters enclosed
+### **Wild cards**   
+- `?`: match any single characters 
+- `*`: match any string
+- `[abc]`: match any characters enclosed
 
-- **Boolean value**   
+### **Boolean value**   
 You can try : `false; echo $?` The output is `1`, which means in bash shell:   
 `1` for `false`   
 `0` for `true`
 
-- **Different parenthesis and brackets**   
+### **Different parenthesis and brackets**  
 See  [Parenthesis difference](http://stackoverflow.com/questions/2188199/how-to-use-double-or-single-bracket-parentheses-curly-braces).
 	- **Double parenthesis** (arithmetic operator) :
 		- `((  expr ))` : enables the usage of  things like `<, >, <=` etc. 
 		- `echo $(( 5 <= 3 ))`, and we get `0`
 		- arithmetic operator interprets `1` as `true`, and `0` as `false`, which is different from the `test` command
 
-	- **Braces**
-		- Used for **parameter expansion**. Can create lists which are often used in loops, eg:
-
-	```bash
-	$ echo {00..8..2} 
-	00 02 04 06 08 
-	```
+### **Braces**
+- Used for **parameter expansion**. Can create lists which are often used in loops, eg:
+ 
+```bash
+$ echo {00..8..2} 
+00 02 04 06 08 
+```
 		
-	- **Single and double square brackets**    
-	Much of below is from [bash brackets](http://stackoverflow.com/questions/3427872/whats-the-difference-between-and-in-bash), and [bash test functions](http://www.ibm.com/developerworks/library/l-bash-test/).
-		- `[ expression ]` is the same as `test expression`. eg:
-			`test -e "$HOME" ` same as `[ -e "$HOME" ]`   
-			and both of them requires careful handling of escaping characters.
-		- use `-a, -o` or `||, &&` for group testing. eg:
+### **Single and double square brackets**    
+Much of below is from [bash brackets](http://stackoverflow.com/questions/3427872/whats-the-difference-between-and-in-bash), and [bash test functions](http://www.ibm.com/developerworks/library/l-bash-test/).
 
-			```bash   
-			# the following are the same
-			$ test -e "file1" -a -d "file2"
-			$ test -e "file1" && test -d "file2"
-			$ [ -e "file1" ] && [ -d "file2" ]
-			$ [ -e "file1" -a "file2" ]
-			```
+- `[ expression ]` is the same as `test expression`. eg:   
+	`test -e "$HOME" ` same as `[ -e "$HOME" ]`   
+and both of them requires careful handling of escaping characters.
+
+- use `-a, -o` or `||, &&` for group testing. eg:
+
+```bash   
+# the following are the same
+$ test -e "file1" -a -d "file2"
+$ test -e "file1" && test -d "file2"
+$ [ -e "file1" ] && [ -d "file2" ]
+$ [ -e "file1" -a "file2" ]
+```
 			
-			Note that `[ expr1 ] -a [ expr2 ]`, `[ expr1 && expr2 ]` results in error.
-		- `[[  expression ]]` allows you to use more natural syntax for file and string comparisons. If you want to compare number, it's more common to use double brackets `(( ))`.   
+Note that `[ expr1 ] -a [ expr2 ]`, `[ expr1 && expr2 ]` results in error.
+
+- `[[  expression ]]` allows you to use more natural syntax for file and string comparisons. If you want to compare number, it's more common to use double brackets `(( ))`.   
 		eg. `[[ -e "file1" && -e "file2" ]]`.   
 		`[[ ]]` doesn't support `-a, -o` inside.
 
-- **Quotes**    	
+### **Quotes**    	
 Things inside the same quote are considered as one variable.
-	- Single quotes: preserves whatever inside
-	- Double quotes: do not preserve words involving `$ or \` and etc.
+
+- Single quotes: preserves whatever inside
+- Double quotes: do not preserve words involving `$ or \` and etc.
 
 	See [Quotes difference](http://stackoverflow.com/questions/6697753/difference-between-single-and-double-quotes-in-bash) for more.
 
-- **Environment Variables** 	
-	- `$PS1`: controls shell prompt
-	- `$PATH`: when shell receives non-builtin command, it goes into `$PATH` to look for it.
-	- `$HOME`: home directory
+### **Environment Variables** 	
+- `$PS1`: controls shell prompt
+- `$PATH`: when shell receives non-builtin command, it goes into `$PATH` to look for it.
+- `$HOME`: home directory
 
-- **Easy command substitute**    
-Say my previous command is `vim project.txt`. Now I want to `open` this file instead of using `vim`. Then I can simply input: `$ !vim:s/vim/open`, where `$` is the shell prompt. Basically this is performing `sed` on whatever the results are from `!vim`.
+### **Easy command substitute**    
+Say my previous command is `vim project.txt`. Now I want to `open` this file instead of using `vim`. Then I can simply input:    
 
-- **Redirection**    
+```bash
+$ !vim:s/vim/open   
+```
+where `$` is the shell prompt. Basically this is performing `sed` on whatever the results are from `!vim`.
+
+### **Redirection**    
 Bash shell has 3 basic streams: `input(0)`, `output(1)`, and `error(2)`. We can use `#number>` to redirect them to somewhere else, eg:
-	- Input redirection: 
-		1.  `<` or `0<`
-		2.  `command << EOF`, and then manually input argument file, using `EOF` to end inputting (or use `ctrl + D`). `<<` is `here document` symbol.
-		3.  `command <<< string` : it's `here string` symbol. Can input a one row string argument.   
+
+- Input redirection:    
+	- `<` or `0<`   
+	- `command << EOF`, and then manually input argument file, using `EOF` to end inputting (or use `ctrl + D`). `<<` is `here document` symbol.   
+	-  `command <<< string` : it's `here string` symbol. Can input a one row string argument. 
+
+- output redirection:  
 	- `>` or `1>`: redirect output
 	- `2>`: redirect error log 
 	- `2>1&` : direct stderr to stdout stream, copy where stdout goes. And `1>2&` means vice versa. Here the `>&` is a syntax to pipe one stream to another.
@@ -251,14 +269,14 @@ $ ./myprog arg1 2> file.err
 $ ./myprog arg1 &> out_and_err
 ```
 	
-- **Want no output** 
+### **Want no output** 
 Use `command > /dev/null 2>&1`
 
-- **Externals and Builtin** 
+### **Externals and Builtin** 
 External commands initiates subprocesses (or subshells), while builtin functions don't. For this reason, builtin functions are faster than externals.
 
 
-- **Command substitution**   
+### **Command substitution**   
 If we want to use the output of `command 1` in a sentence, we can do it in the following two ways:
 
 ```bash
