bash.md: REGEX added

--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -1,6 +1,6 @@
 ---
 title:  "some BASH topics"
-date:   2016-11-16 
+date:   2016-11-18
 layout: single
 author_profile: true
 comments: true
@@ -8,15 +8,41 @@ comments: true
 
 The more I use bash the more I find it interesting. Basically every time I encounter a useful bash commands or when I learn something new about a command, I write them down for future reference. 
 
+
+
 Quick links:
 
 - [Regular Expression](#regex) 
 - [find](#find)
 - [vim](#vim)
 - [sed](#sed)
+- [head,tail](#head)
 - [Others](#others)
 
 ## <a name="regex"></a>Regular Expressions (to be updtaed)
+Regular expressions(REGEX) are sets of characters and/or _metacharacters_ that **match patterns** ---- [REGEX intro](http://tldp.org/LDP/abs/html/x17129.html).
+
+A REGEX can contain:
+
+- character set, eg: `abcd`
+- anchor, eg:`^,$` to match beginning and end of string
+- modifiers, eg: `*,?,\`
+
+**REGEX examples** 
+  
+- `?`: match any single characters 
+- `*`: match any string
+- `[abc]`: match any characters enclosed
+- `[c-g0-7]`: match letters from c to g, or numbers from 0 to 7
+- `[^b-y]`: except 
+- `[a1-a2]`: ascii code from `a1` to `a2`
+- `+`: match one or more if previous char
+
+```bash
+echo aaazz | grep "a\+z"
+```
+
+Functions such as `awk` and `egrep` provide even richer set of metacharacters.
 
 ## Show recently modified files
 This along with many other ways of displaying files could be accomplished using function `find`. Some examples  are as follows:
@@ -165,6 +191,8 @@ which will do the work of replacing `RegEx` with `replacement`.
 Things in `\(...\)` are referred. A dot $\cdot$ in Regex can signify any character. Useful to use dots to describe patterns.
 
 
+## <a name="head"></a> head, tail
+
 
 ## Shell scripting 
 
@@ -176,11 +204,6 @@ Things in `\(...\)` are referred. A dot $\cdot$ in Regex can signify any charact
 
 
 ## <a name="others"></a> Others
-
-### **Wild cards**   
-- `?`: match any single characters 
-- `*`: match any string
-- `[abc]`: match any characters enclosed
 
 ### **Boolean value**   
 You can try : `false; echo $?` The output is `1`, which means in bash shell:   
