bash.md: REGEX added

--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -212,10 +212,11 @@ You can try : `false; echo $?` The output is `1`, which means in bash shell:
 
 ### **Different parenthesis and brackets**  
 See  [Parenthesis difference](http://stackoverflow.com/questions/2188199/how-to-use-double-or-single-bracket-parentheses-curly-braces).
-	- **Double parenthesis** (arithmetic operator) :
-		- `((  expr ))` : enables the usage of  things like `<, >, <=` etc. 
-		- `echo $(( 5 <= 3 ))`, and we get `0`
-		- arithmetic operator interprets `1` as `true`, and `0` as `false`, which is different from the `test` command
+
+- **Double parenthesis** (arithmetic operator) :   
+	- `((  expr ))` : enables the usage of  things like `<, >, <=` etc. 
+	- `echo $(( 5 <= 3 ))`, and we get `0`
+	- arithmetic operator interprets `1` as `true`, and `0` as `false`, which is different from the `test` command
 
 ### **Braces**
 - Used for **parameter expansion**. Can create lists which are often used in loops, eg:
@@ -292,7 +293,7 @@ $ ./myprog arg1 2> file.err
 $ ./myprog arg1 &> out_and_err
 ```
 	
-### **Want no output** 
+- Want no output   
 Use `command > /dev/null 2>&1`
 
 ### **Externals and Builtin** 
