some tags added

--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -4,7 +4,9 @@ date:   2016-11-18
 layout: single
 author_profile: true
 comments: true
+tags: [linux, bash]
 ---
+
 
 The more I use bash the more I find it interesting. Basically every time I encounter a useful bash commands or when I learn something new about a command, I write them down for future reference. 
 
