--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -1,10 +1,12 @@
 ---
 title:  "Git for version control"
-date:   2016-10-25
+date:   2016-10-27
 layout: single
 author_profile: true
 comments: true
+tags: [git]
 ---
+
 Git is a great version control tool. It allows you to keep a history of your code, sync your project online and collaborate with others.
 
 ### resource
@@ -12,7 +14,7 @@ Git is a great version control tool. It allows you to keep a history of your cod
 - git tutorial: [git tutorial](https://www.atlassian.com/git/tutorials/)
 
 
-## intro 
+## BASIC
 
 - initiate a git repository:	
   `cd` into the directory where you want to initiate a git repository, and use `git init`
@@ -34,7 +36,7 @@ Git is a great version control tool. It allows you to keep a history of your cod
 
 
 
-## back tracing 
+## Play with commits
 
 - `git show`: can be used to show various objects       
 	eg: `git show HEAD` ----- show most recent commit
@@ -53,7 +55,7 @@ Git is a great version control tool. It allows you to keep a history of your cod
 
 
 
-## git branching 
+## Branching 
 Branching of git is good for modulized work. Assume you have some intermediate product, and you are going to add another feature to it. It's good practice to open up a new branch `new_feature`, work on that branch until your new program passed all kinds tests, and then you can safely merge the `new_feature` branch back to your `master branch`.   
 This way if anything horrible happens to your `new_feature` code, you can always return to your master branch without worrying that your intermediate product is also messed up.
 
@@ -69,7 +71,7 @@ This way if anything horrible happens to your `new_feature` code, you can always
 
 
 
-## git remote 
+## Remote
 With `git remote` you can freely transport your own git repository or copy others' git repository.
 
 - clone git from `remote_repository` and put under folder `clone_name`:   
@@ -93,7 +95,7 @@ With `git remote` you can freely transport your own git repository or copy other
 
 
 ## Collaboration 
-Git can make life easier when you are doing collaboration work with other people. You may have a shared repository in some cloud service, and each of your pull the repository to your local laptop, and work on different branches. Here's how you contribute to the online repository:
+Git can make life easier when you are doing collaboration work with other people. You may have a shared repository on Github, and each of your pull the repository to your local laptop, and work on different branches. Here's how you contribute to the online repository:
 
 1.Fetch and merge changes from the remote
 
