--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -21,6 +21,11 @@ Quick links:
 - [head,tail](#head)
 - [Others](#others)
 
+
+Online references:
+
+- [GNU/Linux Command-Line Tools Summary](http://www.tldp.org/LDP/GNU-Linux-Tools-Summary/html/book1.htm)
+
 ## <a name="regex"></a>Regular Expressions (to be updtaed)
 Regular expressions(REGEX) are sets of characters and/or _metacharacters_ that **match patterns** ---- [REGEX intro](http://tldp.org/LDP/abs/html/x17129.html).
 
@@ -44,23 +49,11 @@ A REGEX can contain:
 echo aaazz | grep "a\+z"
 ```
 
+- `{}` is often used to extend list, eg:   
+	`ls {a*,b*}` lists files starting with either `a` or `b`.
+
 Functions such as `awk` and `egrep` provide even richer set of metacharacters.
 
-## Show recently modified files
-This along with many other ways of displaying files could be accomplished using function `find`. Some examples  are as follows:
-
-- Find files modified within a day:	
-	- `find . -mtime -1`
-	- For over a day, replace `-` in front of 1 with `+`
-
-- Find files modified within 30 minutes:    
-	`find . -mmin -30`
-	
-- Find folders:	
-	`find . -type d`
-
-- Find files with certain size:	
-	`find . -size +1M`
 
 ## Resolve symbolic links
 Say `courses` is a symbolic link I created. If I `cd` this link, and then print working directory:
