--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -1,10 +1,10 @@
 ---
 title:  "some BASH topics"
-date:   2016-11-18
+date:   2016-11-23
 layout: single
 author_profile: true
 comments: true
-tags: [linux, bash]
+tags: [bash]
 ---
 
 
@@ -15,6 +15,7 @@ The more I use bash the more I find it interesting. Basically every time I encou
 Quick links:
 
 - [Regular Expression](#regex) 
+- [Bash Arrays](#array)
 - [find](#find)
 - [vim](#vim)
 - [sed](#sed)
@@ -54,6 +55,19 @@ echo aaazz | grep "a\+z"
 
 Functions such as `awk` and `egrep` provide even richer set of metacharacters.
 
+
+## <a name="array"></a> Bash Arrays
+
+- Arrays can be constructed using round brackets:   
+`var=(item0 item1 item2)`   
+- To access items or change item values, we can use `var[index]`. Eg:   
+`var[index]=new_value`   
+`echo ${var[index]}`   
+	Note that when `var` is an array, the name `var` actually only refers to `var[0]`. To refer to the whole array, need to use `var[@]` or `var[*]`.
+- sub-array expansion:   
+	- `${var[*]:s_ind}`  gives the subarray starting from index `s_ind`.
+	- `${var[@]:s_ind:l}` gives you the length `l` sub-array starting at index `s_ind`. 
+	- Can also replace `@` with `*`.
 
 ## Resolve symbolic links
 Say `courses` is a symbolic link I created. If I `cd` this link, and then print working directory:
