tried to display markdown math

--- a/_posts/2016-10-21-Latex.md
+++ b/_posts/2016-10-21-Latex.md
@@ -8,7 +8,8 @@ tags: [latex]
 ---
 
 
-This is my collection of $\LaTeX$ tools that has been very useful in practice.
+This is my collection of $\LaTeX$
+tools that has been very useful in practice.
 
 Topics include:   
 
