--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -1,6 +1,6 @@
 ---
 title:  "some BASH topics"
-date:   2016-11-23
+date:   2016-12-02
 layout: single
 author_profile: true
 comments: true
@@ -15,9 +15,11 @@ The more I use bash the more I find it interesting. Basically every time I encou
 Quick links:
 
 - [Regular Expression](#regex) 
+- [File Globbing](#globbing)
 - [Bash Arrays](#array)
 - [find](#find)
 - [vim](#vim)
+- [grep](#grep)
 - [sed](#sed)
 - [head,tail](#head)
 - [Others](#others)
@@ -27,34 +29,52 @@ Online references:
 
 - [GNU/Linux Command-Line Tools Summary](http://www.tldp.org/LDP/GNU-Linux-Tools-Summary/html/book1.htm)
 
-## <a name="regex"></a>Regular Expressions (to be updtaed)
+## <a name="regex"></a>Regular Expressions
 Regular expressions(REGEX) are sets of characters and/or _metacharacters_ that **match patterns** ---- [REGEX intro](http://tldp.org/LDP/abs/html/x17129.html).
 
 A REGEX can contain:
 
 - character set, eg: `abcd`
 - anchor, eg:`^,$` to match beginning and end of string
-- modifiers, eg: `*,?,\`
+- modifiers, eg: `?,\`
 
 **REGEX examples** 
   
 - `?`: match any single characters 
-- `*`: match any string
 - `[abc]`: match any characters enclosed
 - `[c-g0-7]`: match letters from c to g, or numbers from 0 to 7
 - `[^b-y]`: except 
 - `[a1-a2]`: ascii code from `a1` to `a2`
+- `[!9]`: NOT 9
 - `+`: match one or more if previous char
 
 ```bash
 echo aaazz | grep "a\+z"
 ```
 
-- `{}` is often used to extend list, eg:   
-	`ls {a*,b*}` lists files starting with either `a` or `b`.
+- [:upper:] uppercase letters
+- [:lower:] lowercase letters
+- [:alpha:] alphabetic (letters) meaning upper+lower (both uppercase and lowercase letters)
+- [:digit:] numbers in decimal, 0 to 9
+- [:alnum:] alphanumeric meaning alpha+digits (any uppercase or lowercase letters or any decimal digits)
+- [:space:] whitespace meaning spaces, tabs, newlines and similar
+- [:graph:] graphically printable characters excluding space
+- [:print:] printable characters including space
+- [:punct:] punctuation characters meaning graphical characters minus alpha and digits
+- [:cntrl:] control characters meaning non-printable characters
+- [:xdigit:] characters that are hexadecimal digits.
 
 Functions such as `awk` and `egrep` provide even richer set of metacharacters.
 
+## <a name="globbing"></a> File Globbing
+File Globbing and REGEX can be confusing. REGEX is used in functions for **matching text in files**, while globbing is used by shells to **match file/directory names** using wildcards.
+
+Wildcards:
+
+- `*`: match any string
+- `{}` is often used to extend list, eg:   
+	`ls {a*,b*}` lists files starting with either `a` or `b`.
+- []: same as in REGEX
 
 ## <a name="array"></a> Bash Arrays
 
@@ -152,7 +172,7 @@ We will introduce each of above parameters and some more in this section:
 	- finded file will be placed in the position of `{}` and execute the command
 
 
-## grep
+## <a name="grep"></a>grep
 `grep` is used for searching lines in a file with certain pattern strings. 	
 General formula: `grep pattern filename`    
 There are rich parameters you can specify:
@@ -170,8 +190,11 @@ There are rich parameters you can specify:
 
 - `-C3`: show 3 lines before and after
 
-- **grep multiple patters**:
-  `grep "pattern1|pattern2" filename`
+- **logical grep**:
+  - OR grep:  `grep pattern1|pattern2 filename`
+  - AND grep: `grep pattern1.*pattern2 filename`
+  - NOT grep: `grep -v pattern filename`   
+	where `-v` stands for invert match
 
 ## <a name="sed"></a>sed
 
