--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -69,7 +69,7 @@ Functions such as `awk` and `egrep` provide even richer set of metacharacters.
 ## <a name="globbing"></a> File Globbing
 File Globbing and REGEX can be confusing. REGEX is used in functions for **matching text in files**, while globbing is used by shells to **match file/directory names** using wildcards.
 
-Wildcards:
+Wildcards (some in REGEX may also apply):
 
 - `*`: match any string
 - `{}` is often used to extend list, eg:   
