--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -1,6 +1,6 @@
 ---
 title:  "Git for version control"
-date:   2016-10-27
+date:   2016-12-14
 layout: single
 author_profile: true
 comments: true
@@ -12,9 +12,14 @@ Git is a great version control tool. It allows you to keep a history of your cod
 ### resource
 - Online git simulator and tutorial: [git branching](http://learngitbranching.js.org/)
 - git tutorial: [git tutorial](https://www.atlassian.com/git/tutorials/)
+- [A visual git reference](http://marklodato.github.io/visual-git-guide/index-en.html)
 
 
 ## BASIC
+
+- configurations   
+ `git config --global user.name "your name"`   
+ `git config --global user.email "your.email"`
 
 - initiate a git repository:	
   `cd` into the directory where you want to initiate a git repository, and use `git init`
@@ -23,7 +28,10 @@ Git is a great version control tool. It allows you to keep a history of your cod
   It reports which branch you are on, what files are changed, and which files are not tracked.
 
 - track a file:   
-  If you want to keep track of the changes in `file_A`, use `git add file_A`.
+  If you want to keep track of the changes in `file_A`, use `git add file_A`.   
+
+- rename or move a file:   
+	`git mv old_file new_file`
 
 - untrack a file: `git rm --cached filename`    
  see [reset and rm](http://stackoverflow.com/questions/6919121/why-are-there-2-ways-to-unstage-a-file-in-git) for a discussion of the difference between `git reset` and `git rm --cached`.
@@ -33,26 +41,59 @@ Git is a great version control tool. It allows you to keep a history of your cod
 
 - show your commit history: `git log`
 
+```bash
+# show latest n commits
+git log -n
+# simplified log
+git log --oneline
+git log --oneline  --decorate [--decorate]
+```
+
+- use `.gitignore` to specify files to be ignored   
+	Usually this kind of files are product files including:      
+	- image files
+	- pdfs
+	- compiled code
+	- system files
 
 
-
-## Play with commits
+## Commits
+- commit changes:   
+	
+```bash
+	git commit -a -m "commit message" #commit all changes in repository   
+	git add changed_file1 changed_file2 # add files to staging area
+	git commit -m "commit message" # commit changes in staging area
+```
+	
 
 - `git show`: can be used to show various objects       
 	eg: `git show HEAD` ----- show most recent commit
 
 - change file back to its  older version.   
    `git checkout HEAD filename` 	  
-   change file back to its version in `HEAD`. Can replace head with other commits.
+   change file back to its version in `HEAD`. Can replace head with other commits. Without specification of `filename`, the whole repository will be rewired.  
 
-- change file to its version in `HEAD`    
-  `git reset HEAD filename`        
-  See a discussion of `git reset` and `git checkout`: [reset and checkout](http://stackoverflow.com/questions/3639342/whats-the-difference-between-git-reset-and-git-checkout).  
+- move current branch to a specified commit (first 7 digits, shown in `git log`):   
+   `git reset commit_id`   
+   
+     See a discussion of `git reset` and `git checkout`: [reset and checkout](http://stackoverflow.com/questions/3639342/whats-the-difference-between-git-reset-and-git-checkout).
 
-- move `HEAD` to a specified commit (first 7 digits, shown in `git log`):   
-   `git reset commit_id`
+#### Topics
+**save new commits after `git checkout`**   
+once you use `git checkout  commit_id`, your head is detached, and you are not on any branch anymore (or you are on an anonymous branch). You can still stage and commit changes, but they won't show up on branch master. 
 
+To be able to keep those changes, you can do:
 
+```bash
+# put current changes in a branch: new
+git checkout -b new
+# merge new with master
+git checkout master
+git merge new  # may have to manually adjust conflicts
+``` 
+
+see illustration [save commits after git-checkout](http://marklodato.github.io/visual-git-guide/index-en.html#detached).
 
 
 ## Branching 
