git.md: git rm --cached added

--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -1,6 +1,6 @@
 ---
 title:  "Git for version control"
-date:   2016-12-14
+date:   2016-12-18
 layout: single
 author_profile: true
 comments: true
@@ -33,8 +33,11 @@ Git is a great version control tool. It allows you to keep a history of your cod
 - rename or move a file:   
 	`git mv old_file new_file`
 
-- untrack a file: `git rm --cached filename`    
- see [reset and rm](http://stackoverflow.com/questions/6919121/why-are-there-2-ways-to-unstage-a-file-in-git) for a discussion of the difference between `git reset` and `git rm --cached`.
+- remove a file: `git rm  filename`   
+	with this command the file is removed both in repository and in file system.   
+	If you just want to remove it from repository, but keep the file in system (simply untrack), use:   
+	`git rm --cached filename`    
+	
 
 - check the changes in file with last staged version: `git diff filename`   
 	changes are marked with `+` or `-`
