git.md: git rm --cached added

--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -49,7 +49,7 @@ Git is a great version control tool. It allows you to keep a history of your cod
 git log -n
 # simplified log
 git log --oneline
-git log --oneline  --decorate [--decorate]
+git log --oneline  [--decorate]
 ```
 
 - use `.gitignore` to specify files to be ignored   
