bash.md: discussion of .bash_profile, .profile

--- a/_posts/2016-11-16-bash.md
+++ b/_posts/2016-11-16-bash.md
@@ -79,7 +79,8 @@ Wildcards (some in REGEX may also apply):
 ## <a name="array"></a> Bash Arrays
 
 - Arrays can be constructed using round brackets:   
-`var=(item0 item1 item2)`   
+`var=(item0 item1 item2)` or    
+`var=($(ls -d ./))`   
 - To access items or change item values, we can use `var[index]`. Eg:   
 `var[index]=new_value`   
 `echo ${var[index]}`   
@@ -222,6 +223,9 @@ which will do the work of replacing `RegEx` with `replacement`.
 
 Things in `\(...\)` are referred. A dot $\cdot$ in Regex can signify any character. Useful to use dots to describe patterns.
 
+- you can also `sed` multiple patterns separated by `;`, eg:
+	`sed s/pattern1/replace1/;s/pattern2/replace2/g  < file`
+
 
 ## <a name="head"></a> head, tail
 
@@ -328,9 +332,16 @@ $ ./myprog arg1 &> out_and_err
 - Want no output   
 Use `command > /dev/null 2>&1`
 
-### **Externals and Builtin** 
-External commands initiates subprocesses (or subshells), while builtin functions don't. For this reason, builtin functions are faster than externals.
+### ~/.bash_profile, ~/.profile and ~/.bashrc
+These are files where you can personalize commands to be executed upon shell login.
 
+A bash shell would look for `~/.bash_profile` first. If it does not exist, it executes `~/.profile`.
+
+When you start a shell in an existing session (such as screen), you get an interactive, non-login shell. That shell may read configurations in `~/.bashrc`. 
+
+See discussions:    
+[login, non-login](http://unix.stackexchange.com/questions/38175/difference-between-login-shell-and-non-login-shell)   
+[different startup files](http://superuser.com/questions/183870/difference-between-bashrc-and-bash-profile)
 
 ### **Command substitution**   
 If we want to use the output of `command 1` in a sentence, we can do it in the following two ways:
