latex.md update: length macros

--- a/_posts/2016-10-21-Latex.md
+++ b/_posts/2016-10-21-Latex.md
@@ -1,6 +1,6 @@
 ---
 title:  "Practical LaTeX"
-date:   2016-10-29
+date:   2017-1-5
 layout: single
 author_profile: true
 comments: true
@@ -17,12 +17,28 @@ Topics include:
 - [Section titles](#sections)
 - [Write latex functions](#latex_fun)  
 - [Play with References](#refs) 
+- [Figures](#figs)
 - [Others](#others)
 
 
 Online Resource:
 
 - All kinds of common topics listed on the left bar: [ShareLatex](https://cn.sharelatex.com/learn/Main_Page)
+
+## Manipulating length
+
+### default lengths in LaTeX
+
+- `\linewidth` : width of the line in the local environment
+- `\textwidth, \textheight` : width/height of text on the page
+- `\baselineskip`: normal distance between lines 
+- `\smallskip, \medskip, \bigskip`: insert small/medium/big vertical space
+- `x \hspace{\stretch{1}} x \hspace{\stretch{3}}`: distance ratio between x's is 1:3
+
+### define/renew distances
+
+- `\setlength{\mylength}{length_value}` : create new length `\mylength`
+- `\addtolength{\mylength}{value}`: change existing length
 
 ## <a name="page"></a> About page setup
 `geometry`
@@ -72,25 +88,33 @@ Some useful variables:
 
 For more: [section and chapter](https://cn.sharelatex.com/learn/Sections_and_chapters#/Document_Sectioning).
 
+## <a name="figs"></a>Figures
+### Figures side by side
+You can use the `subcaption` package and `subfigure` environment for this feature. It allows you to label and caption each subfigure as well.
 
-
-## <a name="latex_fun"></a> Write your own latex functions
-
-
-Briefly introduce how to write a new function in $\LaTeX$. Let me illustrate with an example function with 2 variables:
+The following is a example of inserting two figures side by side:
 
 ```latex
-\newcommand{\myfun}[2] { #1 #2 \ is \ awesome! }
-% [2]: function of 2 variables
-% #1 #2: input parameters of the function
-
-% To use the function, inputs should be passed with separate brackets {}
-\myfun{Power}{God}
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \caption{A subfigure}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.4\linewidth]{image1}
+  \caption{A subfigure}
+  \label{fig:sub2}
+\end{subfigure}
+\caption{A figure with two subfigures}
+\label{fig:test}
+\end{figure}
 ```
 
-And see what we get:   
-$\newcommand{\myfun}[2] { #1 #2 \ is \ awesome! }$
-$\myfun{Power}{God}$
+Example from [stackoverflow discussion](http://tex.stackexchange.com/questions/37581/latex-figures-side-by-side).
 
 
 ## <a name="refs"></a>About References
@@ -118,6 +142,27 @@ More examples could be found in `natbib manual`.
 
 - Different journal may require different bibliography styles.   
 To preview their different appearances, check out [bib style](http://www.reed.edu/cis/help/LaTeX/bibtexstyles.html) or [bib style2](http://www.cs.stir.ac.uk/~kjt/software/latex/showbst.html).
+
+
+## <a name="latex_fun"></a> Write your own latex functions
+
+
+Briefly introduce how to write a new function in $\LaTeX$. Let me illustrate with an example function with 2 variables:
+
+```latex
+\newcommand{\myfun}[2] { #1 #2 \ is \ awesome! }
+% [2]: function of 2 variables
+% #1 #2: input parameters of the function
+
+% To use the function, inputs should be passed with separate brackets {}
+\myfun{Power}{God}
+```
+
+And see what we get:   
+$\newcommand{\myfun}[2] { #1 #2 \ is \ awesome! }$
+$\myfun{Power}{God}$
+
+
 
 
 ## <a name="others"></a> Others
