git.md : trivial changes

--- a/_posts/2016-10-25-git.md
+++ b/_posts/2016-10-25-git.md
@@ -21,28 +21,28 @@ Git is a great version control tool. It allows you to keep a history of your cod
  `git config --global user.name "your name"`   
  `git config --global user.email "your.email"`
 
-- initiate a git repository:	
+- initiate a git repository:   
   `cd` into the directory where you want to initiate a git repository, and use `git init`
 
-- chech status of current repository: `git status`. 
+- chech status of current repository: `git status`.    
   It reports which branch you are on, what files are changed, and which files are not tracked.
 
-- track a file:   
+- track a file:      
   If you want to keep track of the changes in `file_A`, use `git add file_A`.   
 
-- rename or move a file:   
+- rename or move a file:      
 	`git mv old_file new_file`
 
-- remove a file: `git rm  filename`   
-	with this command the file is removed both in repository and in file system.   
-	If you just want to remove it from repository, but keep the file in system (simply untrack), use:   
+- remove a file: `git rm  filename`      
+	with this command the file is removed both in repository and in file system.      
+	If you just want to remove it from repository, but keep the file in system (simply untrack), use:      
 	`git rm --cached filename`    
 	
 
-- check the changes in file with last staged version: `git diff filename`   
-	changes are marked with `+` or `-`
+- check the changes in file with last staged version: `git diff filename`       
+	changes are marked with `+` or `-`   
 
-- show your commit history: `git log`
+- show your commit history: `git log`   
 
 ```bash
 # show latest n commits
@@ -52,8 +52,9 @@ git log --oneline
 git log --oneline  [--decorate]
 ```
 
-- use `.gitignore` to specify files to be ignored   
-	Usually this kind of files are product files including:      
+- use `.gitignore` to specify files to be ignored      
+	Usually this kind of files are product files, including but not limited to:   
+	      
 	- image files
 	- pdfs
 	- compiled code
@@ -61,6 +62,7 @@ git log --oneline  [--decorate]
 
 
 ## Commits
+
 - commit changes:   
 	
 ```bash
@@ -70,14 +72,14 @@ git log --oneline  [--decorate]
 ```
 	
 
-- `git show`: can be used to show various objects       
+- `git show`: can be used to show various objects          
 	eg: `git show HEAD` ----- show most recent commit
 
 - change file back to its  older version.   
    `git checkout HEAD filename` 	  
-   change file back to its version in `HEAD`. Can replace head with other commits. Without specification of `filename`, the whole repository will be rewired.  
+   change file back to its version in `HEAD`. Can replace head with other commits. Without specification of `filename`, the whole repository will be rewired.     
 
-- move current branch to a specified commit (first 7 digits, shown in `git log`):   
+- move current branch to a specified commit (first 7 digits, shown in `git log`):      
    `git reset commit_id`   
    
      See a discussion of `git reset` and `git checkout`: [reset and checkout](http://stackoverflow.com/questions/3639342/whats-the-difference-between-git-reset-and-git-checkout).
@@ -100,7 +102,8 @@ see illustration [save commits after git-checkout](http://marklodato.github.io/v
 
 
 ## Branching 
-Branching of git is good for modulized work. Assume you have some intermediate product, and you are going to add another feature to it. It's good practice to open up a new branch `new_feature`, work on that branch until your new program passed all kinds tests, and then you can safely merge the `new_feature` branch back to your `master branch`.   
+Branching of git is good for modulized work. Assume you have some intermediate product, and you are going to add another feature to it. It's good practice to open up a new branch `new_feature`, work on that branch until your new program passed all kinds tests, and then you can safely merge the `new_feature` branch back to your `master branch`. 
+  
 This way if anything horrible happens to your `new_feature` code, you can always return to your master branch without worrying that your intermediate product is also messed up.
 
 - check which branch I'm currently on: `git branch`
@@ -118,8 +121,8 @@ This way if anything horrible happens to your `new_feature` code, you can always
 ## Remote
 With `git remote` you can freely transport your own git repository or copy others' git repository.
 
-- clone git from `remote_repository` and put under folder `clone_name`:   
-  `git clone remote_repository clone_name`   
+- clone git from `remote_repository` and put under folder `clone_name`:    
+  `git clone remote_repository clone_name`     
   will automatically give the remote repository a name `origin`
 
 - show current remotes:  `git remote -v`
@@ -127,13 +130,13 @@ With `git remote` you can freely transport your own git repository or copy other
 - add a new remote under name `remote_name`:    
 	`git remote add remote_name url`
 
-- get most recent update from remote; saved in `origin/master` branch
-	`git fetch origin`    
+- get most recent update from remote (saved in `origin/master` branch) : `git fetch origin`    
+	
 	If you want to move to the downloaded branch, use `git checkout -- track origin/master`
 
-- push a branch in your repository to a remote repository:
-   `git push remote_name branch_name`    
-   push branch_name onto remote_name 
+- push a branch in your repository to a remote repository:   
+   `git push remote_name branch_name`   
+	which  pushes branch\_name onto remote\_name 
 
 
 
